--- a/toeic-app.html
+++ b/toeic-app.html
@@ -143,13 +143,13 @@
         <section id="view-login" class="fade-in max-w-md mx-auto pt-10 text-center">
             <div class="mb-8">
                 <i class="fa-solid fa-graduation-cap text-6xl text-brand-600 mb-4"></i>
-                <h1 class="text-3xl font-bold text-gray-800">TOEIC Master</h1>
+                <h1 class="text-3xl font-bold text-gray-800">TOEIC Siêu Cấp Vjp Pr0</h1>
                 <p class="text-gray-500">Vui lòng đăng nhập để tiếp tục</p>
             </div>
 
             <div class="bg-white p-6 rounded-2xl shadow-lg border border-gray-100">
                 <div class="mb-4 text-left">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">Mã truy cập (Access Code)</label>
+                    <label class="block text-gray-700 text-sm font-bold mb-2">Nhập mã tân thủ hoặc Nạp card 20k để mạnh hơn😘</label>
                     <input type="text" id="access-code" class="w-full px-4 py-3 rounded-lg border focus:ring-2 focus:ring-brand-500 outline-none transition uppercase" placeholder="Nhập mã code...">
                 </div>
                 
