--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
             <div class="bg-white p-6 rounded-2xl shadow-lg border border-gray-100">
                 <div class="mb-4 text-left">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">Nhập mã tân thủ hoặc Nạp card 20k để mạnh hơn nhoo😘</label>
+                    <label class="block text-gray-700 text-sm font-bold mb-2">Nhập mã tân thủ or Nạp card 20k để mạnh hơn😘</label>
                     <input type="text" id="access-code" class="w-full px-4 py-3 rounded-lg border focus:ring-2 focus:ring-brand-500 outline-none transition uppercase" placeholder="Nhập mã code...">
                 </div>
                 
